--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "plugin",
         "html",
         "css",
-        "javacript",
+        "javascript",
         "front-end",
         "web",
         "development"
