--- a/package.json
+++ b/package.json
@@ -1,45 +1,37 @@
 {
-    "name": "countdown",
-    "description": "A jQuery countdown plugin.",
-    "version": "0.1.0",
-    "keywords": [
-        "countdown",
-        "jquery",
-        "plugin",
-        "html",
-        "css",
-        "javascript",
-        "front-end",
-        "web",
-        "development"
-    ],
-    "author": {
-        "name": "Fengyuan Chen",
-        "url": "https://github.com/fengyuanchen"
-    },
-    "homepage": "https://github.com/fengyuanchen/countdown",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/fengyuanchen/countdown.git"
-    },
-    "bugs": {
-        "url": "https://github.com/fengyuanchen/countdown/issues"
-    },
-    "license": {
-        "type": "MIT",
-        "url": "https://github.com/fengyuanchen/countdown/blob/master/LICENSE.md"
-    },
-    "dependencies": {
-        "jquery": ">= 1.9.0"
-    },
-    "devDependencies": {
-        "grunt": "~0.4.5",
-        "grunt-banner": "~0.2.3",
-        "grunt-contrib-clean": "~0.6.0",
-        "grunt-contrib-jshint": "~0.10.0",
-        "grunt-contrib-uglify": "~0.5.1",
-        "grunt-contrib-copy": "~0.5.0",
-        "grunt-contrib-watch": "~0.6.1",
-        "load-grunt-tasks": "~0.6.0"
-    }
+  "name": "countdown",
+  "description": "A simple jQuery countdown plugin.",
+  "version": "0.1.1",
+  "main": "dist/countdown.js",
+  "license": "MIT",
+  "repository": "fengyuanchen/countdown",
+  "homepage": "https://fengyuanchen.github.io/countdown",
+  "author": {
+    "name": "Fengyuan Chen",
+    "url": "http://chenfengyuan.com"
+  },
+  "keywords": [
+    "countdown",
+    "jquery",
+    "plugin",
+    "html",
+    "css",
+    "javascript",
+    "front-end",
+    "web",
+    "development"
+  ],
+  "dependencies": {
+    "jquery": ">= 1.9.1"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-banner": "~0.2.3",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "load-grunt-tasks": "~0.6.0"
+  }
 }
